Get rid of @font-face resource leak.

Clear the StyleEngine of css connected fonts on detach().

This used to be saved by an active stylesheet update, it seems. With
the new active stylesheet update this is done more selectively and it
might have been done when document going inactive before. Clearing the
font cache on detach fixes the leak issues in css3/fonts.

TEST=css3/fonts/
BUG=674934

Review-Url: https://codereview.chromium.org/2582413002
Cr-Commit-Position: refs/heads/master@{#439510}

Former-commit-id: 357396ffe3cc7ace113783f25e088d08e615b08b